--- a/backend/web/css/general.css
+++ b/backend/web/css/general.css
@@ -368,10 +368,10 @@ a {
     border-radius:  0 6px 0 0 ;
 }
 
-.tablas td {
+/*.tablas td {
     padding: 3px 3px 3px 5px;
     height: 40px;
-}
+}*/
 
 .tablas2 {
     margin: 20px;
