--- a/frontend/web/css/general.css
+++ b/frontend/web/css/general.css
@@ -357,7 +357,7 @@ a {
 
 .tablas th {
     font-weight: bold;
-    background-color: #31708F;
+    background-color: #3C8DBC;
     color: #FFF;
     text-transform: uppercase;
     font-size: 12px;
@@ -398,10 +398,6 @@ a {
 .tablas1 {
     margin: 20px;
     width: 95%;
-}
-
-.tablas1 td {
-    border: 1px solid #DBEAF9;
 }
 
 .tinicial {
